# catalyst

./: .gitignore  BROWNFIELD.md  Cargo.toml  MANIFESTO.md  README.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/docs/: ARCHITECTURE.md  SKILLS_AND_AGENTS.md  STATE_MANAGEMENT.md  TOOLS_REFERENCE.md
crates/core/src/: lib.rs  models.rs
crates/core/src/memory/: catalyst_memory.rs  mod.rs  sqlite_memory.rs
crates/core/src/skills/: agent_definitions.rs  architect_skill.rs  artifact_registry.rs  atomizer_skill.rs  builder_skill.rs  constraint_skill.rs  critic_skill.rs  drafting_skill.rs  llm_helpers.rs  merge_skill.rs  mod.rs  orchestrator_skill.rs  parse_skill.rs  prompts.rs  researcher_skill.rs  taskmaster_skill.rs  webscraper_skill.rs
crates/core/src/skills/defaults/: architect.md  atomizer.md  builder.md  critic.md  drafter.md  gardener.md  merge.md  red_team.md  researcher.md  taskmaster.md  unknowns_parser.md  webscraper.md
crates/core/src/skills/tools/: build_tools.rs  file_tools.rs  git_tools.rs  mod.rs  search_tools.rs
crates/core/src/state/: codebase_profile.rs  context_state.rs  db.rs  feature_state.rs  interaction.rs  io.rs  json.rs  mod.rs  project_state.rs  snapshots.rs  specs.rs
crates/core/src/swarm/: a2a_bridge.rs  architecture_generator.rs  coordinator.rs  events.rs  init.rs  mod.rs  pipeline.rs
crates/core/src/tools/: ast_scanner.rs  git.rs  linter.rs  merge.rs  mod.rs  scanner.rs  search.rs  terminal.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/api/: mod.rs  project.rs
legacy_reference/: README.md
legacy_reference/agents/: AgentsView.tsx
legacy_reference/factory/: ReactorPipeline.tsx
legacy_reference/stores/: appStore.ts  reactorStore.ts
legacy_reference/terminal/: TerminalWidget.tsx
