[package]
name = "catalyst_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "catalyst"
path = "src/main.rs"

[dependencies]
catalyst_core = { path = "../core" }
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
mime_guess = "2.0"
rust-embed = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Terminal PTY
portable-pty = "0.8"
dotenvy = "0.15.7"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
